syntax = "proto3";
package teleport.aggregate.v1;
import "gogoproto/gogo.proto";
option go_package = "github.com/teleport-network/teleport/x/aggregate/types";

// Status enumerates the status of IBC Aggregate
enum Status {
  option (gogoproto.goproto_enum_prefix) = false;
  // STATUS_UNKNOWN defines the invalid/undefined status
  STATUS_UNKNOWN = 0;
  // STATUS_SUCCESS defines the success IBC Aggregate execute
  STATUS_SUCCESS = 1;
  // STATUS_FAILED defines the failed IBC Aggregate execute
  STATUS_FAILED = 2;
}

// EventIBCAggregate is emitted on IBC Aggregate
message EventIBCAggregate {
  Status status = 1;
  string message = 2;
  uint64 sequence = 3;
  string source_channel = 4;
  string destination_channel = 5;
}

// Event
message EventEnableTimeBasedSupplyLimit {
  string erc20_address = 3 [ (gogoproto.customname) = "ERC20Address" ];
  // time peroid in seconds
  string timePeriod = 4;
  // time based limit
  string timeBasedLimit = 5;
  // max amount single transfer
  string maxAmount = 6;
  // min amount single transfer
  string minAmount = 7;
}

// Event
message EventDisableTimeBasedSupplyLimit {
  string erc20_address = 3 [ (gogoproto.customname) = "ERC20Address" ];
}